// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array | Array | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Array 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Array [],
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Array | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Array 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    false,
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Array | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Array 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Array | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Array | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Array 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Array 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    0,
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    1,
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Array | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Array 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    Object {},
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Array | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Array | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Array [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Array 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Array 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Array [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Object {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Object {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    null,
    Object {
      "a": Object {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Object {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Object {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Object {
      "a": Object {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a",
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    "a.b",
    Object {
      "a": Object {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;
